commit and push, 1939, 2/11/2023

--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -4,3 +4,7 @@ author: "jjh"
 format: revealjs
 editor: visual
 ---
+
+## Scientific Question
+
+![](image1.png){.absolute top = 200 left = 0 width = "350" height = "300"}
