commit and push, 1333, 2/12/2023

--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -14,3 +14,9 @@ require(knitr)
 ```{r dpi = 72}
 knitr::include_graphics("rpn_wave_fig_c.png")
 ```
+
+#### Wave Power
+
+```{r dpi = 72}
+knitr::include_graphics("rpn_wave_power_fig2.png")
+```
