commit an dpush, 1141, 2/13/2023

--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -35,6 +35,7 @@ Right column
 
 ::: {.column width="40%"}
 Left2 column
+![](rpn_ortho_trace_centroids.png){.fragment width = "350" height = "750"}
 :::
 
 ::: {.column width="60%"}
