commit and push, 1727, 2/13/2023

--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -52,7 +52,7 @@ Right column
 Main Caption
 :::
             
-See @tbl-panel for details, especially @tbl-second.
+See @tbl-panel for details, especially @tbl-first.
 
 :::
 ----
